test/compile_errors/err_result_unwrap_too_many_args.w
//! expect-check-fail: Result.unwrap() expects no arguments

fn main:
    let r: Result[i32, str] = Ok(1)
    let _ = r.unwrap("nope")
